# cmake-sfml-template

./: CMakeLists.txt
